// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BtnIcons > should render component 1`] = `
<a
  data-v-fa03cf5c=""
  href="https://www.google.com"
  target="_blank"
>
  <div
    class="icon-wrapper"
    data-v-fa03cf5c=""
  >
    <span
      aria-hidden="true"
      class="iconify i-times"
      color="white"
      data-v-fa03cf5c=""
    />
  </div>
</a>
`;

exports[`BtnIcons > should render component with link 1`] = `
<a
  data-v-fa03cf5c=""
  href="https://www.facebook.com"
  target="_blank"
>
  <div
    class="icon-wrapper"
    data-v-fa03cf5c=""
  >
    <span
      aria-hidden="true"
      class="iconify i-times"
      color="white"
      data-v-fa03cf5c=""
    />
  </div>
</a>
`;
